added swagger, authority, role and token swagger do not work